Enable module path for all projects, including non-modular subprojects.